kubernetes/apps/networking/speedtest/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: speedtest-tracker

spec:
  replicas: 1
  selector:
    matchLabels:
      app: speedtest-tracker

  template:
    metadata:
      labels:
        app: speedtest-tracker

    spec:
      dnsPolicy: ClusterFirst
      containers:
        - name: speedtest-tracker
          image: lscr.io/linuxserver/speedtest-tracker:latest
          resources:
            limits:
              cpu: 100m
              memory: 512Mi
            requests:
              cpu: 50m
              memory: 256Mi

          volumeMounts:
            - mountPath: /config
              name: speedtest-tracker
      volumes:
        - name: speedtest-tracker
          persistentVolumeClaim:
            claimName: speedtest-tracker
