kubernetes/apps/networking/speedtest/service.yaml
apiVersion: v1
kind: Service
metadata:
  labels:
    app: speedtest-tracker
  name: speedtest-tracker
spec:
  ports:
    - port: 80
  selector:
    app: speedtest-tracker
  type: ClusterIP
